force-app/src/objects/TR1__Message_Detail__c.object
<CustomObject>
    <description>Object to store the message details (like subject, personalization strings, contact document links, content distribution links, etc.) that are needed for rendering all necessary data in emails sent via Marketing Cloud.</description>
    <fields>
        <fullName>TR1__BCC_Emails__c</fullName>
        <description>Stores the list of email addresses to be used as blind carbon copy for messages being sent to Marketing Cloud.</description>
        <inlineHelpText>Stores the list of email addresses to be used as blind carbon copy for messages being sent to Marketing Cloud.</inlineHelpText>
        <label>BCC Emails</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__CC_Emails__c</fullName>
        <description>Stores the list of email addresses to be used as carbon copy for messages being sent to Marketing Cloud.</description>
        <inlineHelpText>Stores the list of email addresses to be used as carbon copy for messages being sent to Marketing Cloud.</inlineHelpText>
        <label>CC Emails</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Contact_Document_Links_JSON__c</fullName>
        <description>Stores the information of Contact Document Links being sent to Marketing Cloud.</description>
        <inlineHelpText>Stores the information of Contact Document Links being sent to Marketing Cloud.</inlineHelpText>
        <label>Contact Document Links JSON</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__HTML_Body__c</fullName>
        <description>Stores the merged HTML body value of the fully-editable message being sent to Marketing Cloud. If desired, more elaborate headers and footers can be added on the Marketing Cloud side.</description>
        <inlineHelpText>Stores the merged HTML body value of the fully-editable message being sent to Marketing Cloud. If desired, more elaborate headers and footers can be added on the Marketing Cloud side.</inlineHelpText>
        <label>HTML Body</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__SF_Content_Distribution_Links_JSON__c</fullName>
        <description>Stores the information of Salesforce Content Distribution links to the shared documents being sent to Marketing Cloud.</description>
        <inlineHelpText>Stores the information of Salesforce Content Distribution links to the shared documents being sent to Marketing Cloud.</inlineHelpText>
        <label>SF Content Distribution Links JSON</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Signature__c</fullName>
        <description>Stores the user&apos;s signature being sent to Marketing Cloud to be merged to the email body.</description>
        <inlineHelpText>Stores the user&apos;s signature being sent to Marketing Cloud to be merged to the email body.</inlineHelpText>
        <label>Signature</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Subject__c</fullName>
        <description>Stores the subject of the message being sent to Marketing Cloud.</description>
        <inlineHelpText>Stores the subject of the message being sent to Marketing Cloud.</inlineHelpText>
        <label>Subject</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <label>Message Detail</label>
    <nameField>
        <displayFormat>MD-{0000}</displayFormat>
        <label>Message Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Message Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>